dataset1235/2025-2/2318198438/users/1967357790/executions/2601575092_3940197836.log
== RUN (2025-08-12 00:34:33)
-- CODE: 
aresta = 3*3**0.5 / 2
area = 5 ** 2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
25
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:36:19)
-- CODE: 
aresta = 5**2
area = 3 * 3 ** 0.5 / 2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
2.5981
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
2.5981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:36:07)
-- CODE: 
aresta = 5**2
area = 3 ** 0.5 / 2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
0.866
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
0.866
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:36:36)
-- CODE: 
aresta = 5**2
area = 3 * 3 ** 0.5 / 2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
2.5981
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
2.5981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:33:01)
-- CODE: 
aresta = 3 * 3 ** 0.5
area = 5 ** 2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
25
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:36:19)
-- CODE: 
aresta = 5**2
area = 3 * 3 ** 0.5 / 2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
2.5981
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
2.5981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:33:23)
-- CODE: 
aresta = 3 ** 0.5 / 2
area = 5 ** 2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
25
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 00:36:53)
-- CODE: 
aresta = 5**2
area = 3 * 3 ** 0.5 / 2 * aresta
 
print(round(area, 4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 00:36:07)
-- CODE: 
aresta = 5**2
area = 3 ** 0.5 / 2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
0.866
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
0.866
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:36:35)
-- CODE: 
aresta = 5**2
area = 3 * 3 ** 0.5 / 2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
2.5981
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
2.5981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:33:13)
-- CODE: 
aresta = 3  3 ** 0.5
area = 5 ** 2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 1
    aresta = 3  3 ** 0.5
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 1
    aresta = 3  3 ** 0.5
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:33:28)
-- CODE: 
aresta = 3 * 3 ** 0.5 / 2
area = 5 ** 2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
25
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:33:16)
-- CODE: 
aresta = 3 ** 0.5
area = 5 ** 2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
25
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:36:52)
-- CODE: 
aresta = 5**2
area = 3 * 3 ** 0.5 / 2 * aresta
 
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:34:52)
-- CODE: 
aresta = 3**0.5 / 2
area = 5 ** 2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
25
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:36:08)
-- CODE: 
aresta = 5**2
area = 3 ** 0.5 / 2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
0.866
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
0.866
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:34:34)
-- CODE: 
aresta = 3*3**0.5 / 2
area = 5 ** 2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
25
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:32:46)
-- CODE: 
aresta = 3 * 3 ** 0.5
area = 2 ** 2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
4
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:34:51)
-- CODE: 
aresta = 3**0.5 / 2
area = 5 ** 2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
25
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 00:33:28)
-- CODE: 
aresta = 3 * 3 ** 0.5 / 2
area = 5 ** 2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
25
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
